<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1">
        <Button
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back"/>
    </LinearLayout>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="@string/username"
                android:textSize="30dp"
                android:gravity="center"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:textColor="@color/colorGray"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:layout_weight="3"
                android:text="@string/p_username" />
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="@string/password"
                android:textSize="30dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textColor="@color/colorGray"
                android:inputType="textPassword"
                android:text="@string/p_password"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/registe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:textColor="@color/colorFont"
                android:background="@color/colorButton"
                android:text="@string/registe" />
            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorButton"
                android:textColor="@color/colorFont"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>